Refactoring popup and analytics

--- a/frontend/projects/shared/popup-add-item/components/card-edit/card.component.stories.mdx
+++ b/frontend/projects/shared/popup-add-item/components/card-edit/card.component.stories.mdx
@@ -1,7 +1,7 @@
-import { AppModule } from '../../app.module';
+import { AppModule } from '../../../../popup/src/app/app.module';
 import { moduleMetadata } from '@storybook/angular';
 import { types } from './story.helper';
-import { STATUS_LIST } from '../../../../../shared/const';
+import { STATUS_LIST } from '../../../const';
 
 <Meta
   title="Popup / Popup"
