--- a/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.stories.mdx
+++ b/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.stories.mdx
@@ -1,4 +1,4 @@
-import { AppModule } from '../../app.module';
+import { AppModule } from '../../../../popup/src/app/app.module';
 import { moduleMetadata } from '@storybook/angular';
 import { foundList, genres } from './story.const';
 
