frontend 1.4 update - add firebase and migrate new api version

--- a/frontend/projects/shared/popup-add-item/components/card-edit/card.component.stories.mdx
+++ b/frontend/projects/shared/popup-add-item/components/card-edit/card.component.stories.mdx
@@ -1,7 +1,7 @@
 import { AppModule } from '../../../../popup/src/app/app.module';
 import { moduleMetadata } from '@storybook/angular';
 import { types } from './story.helper';
-import { STATUS_LIST } from '../../../const';
+import { STATUS_LIST } from '../../../const/const';
 
 <Meta
   title="Popup / Popup"
